--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp">
@@ -19,6 +20,26 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="200dp"
                 android:layout_height="50dp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="500dp">
+            <Button
+                android:layout_margin="10dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
+            <Button
+                android:layout_margin="10dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
+            <Button
+                android:layout_margin="10dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
+            <Button
+                android:layout_margin="10dp"
+                android:layout_width="180dp"
+                android:layout_height="180dp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
