--- a/app/src/main/res/layout/activity_menu_principal.xml
+++ b/app/src/main/res/layout/activity_menu_principal.xml
@@ -21,25 +21,37 @@
                 android:layout_width="200dp"
                 android:layout_height="50dp" />
         </LinearLayout>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp">
+            android:layout_height="330dp"
+            android:orientation="horizontal"
+            android:layout_margin="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
             <Button
+                android:id="@+id/btnGooglePay"
                 android:layout_margin="10dp"
-                android:layout_width="180dp"
-                android:layout_height="180dp" />
+                android:layout_width="140dp"
+                android:layout_height="140dp"/>
             <Button
+                android:id="@+id/btnQR"
                 android:layout_margin="10dp"
-                android:layout_width="180dp"
-                android:layout_height="180dp" />
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_toRightOf="@+id/btnGooglePay"/>
             <Button
+                android:id="@+id/btnGeoLocalizacion"
                 android:layout_margin="10dp"
-                android:layout_width="180dp"
-                android:layout_height="180dp" />
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_below="@+id/btnGooglePay"/>
             <Button
+                android:id="@+id/btnCofiguracion"
                 android:layout_margin="10dp"
-                android:layout_width="180dp"
-                android:layout_height="180dp" />
-        </LinearLayout>
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_below="@+id/btnQR"
+                android:layout_toRightOf="@+id/btnGeoLocalizacion"/>
+        </RelativeLayout>
     </LinearLayout>
 </RelativeLayout>
